# pm2insomnia

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: SECURITY.md
.github/workflows/: publish-package.yml  tests.yml
src/pm2insomnia/: __init__.py  bundle_writer.py  cli.py  converter.py  insomnia_writer.py  models.py  postman_environment_parser.py  postman_parser.py  reporting.py
tests/: test_cli.py  test_parser_and_converter.py
tests/fixtures/: bearer_auth_collection.postman.json  descriptions_collection.postman.json  path_param_metadata_collection.postman.json  path_params_collection.postman.json  response_quality_collection.postman.json  simple_collection.postman.json  warnings_collection.postman.json
